# cli

./: .gitignore  Dockerfile  LICENSE.md  README.md
service/: README.md  pyproject.toml  setup.py
service/src/: api.py  root.py
service/src/cursion/: api.py  root.py
service/src/scanerr/: api.py  root.py
