[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cursion"
version = "0.0.1"
authors = [
  { name="Cursion", email="hello@cursion.dev" },
]
description = "Official Cursion CLI"
readme = "README.md"
requires-python = ">=3.9"
keywords = ["regression testing", "vrt", "visual regression testing"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dynamic = [
  "dependencies"
]

[project.urls]
Homepage = "https://github.com/cursion/cli"
Issues = "https://github.com/cursion/cli/issues"
Documentaion = "https://docs.cursion.dev"

[project.scripts]
cursion = "src.cursion.root:root"
